fixed img heights cut off problem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1338,6 +1338,10 @@
 
 		}
 
+		#main .thumb {
+			height: 30vw;
+		}
+
 /* Footer */
 
 	#footer .copyright {
